--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ telegram.token=5573705009:AAFeAc1drfBS9WuAzhwqB_lCVytTFJwZJmA
 
 bik.schedule=https://bincol.ru/rasp/grupp.php
 bik.group=https://bincol.ru/rasp/view.php?id=
+
+spring.main.allow-circular-references=true
